# NexusEngine

./: .clang-format  .clang-tidy  .gitignore  BuildOptions.cmake  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CODE_OF_CONDUCT.md  LICENSE  Nexus.sln  Nexus.vcxproj  Nexus.vcxproj.filters  README.md  linux-build.sh  vcpkg.json  windows-build.bat
.github/workflows/: cmake.yml  codeql.yml  gh-pages.yml
.run/: windows-build.run.xml
app/: CMakeLists.txt  PixelShader.hlsl  VertexShader.hlsl
app/include/: BindableBase.h  NexusIO.h  NexusMacro.h  NexusWin.h
app/resources/: RCa05416  WindowsProject.rc
app/src/: App.cpp  App.h  Camera.cpp  Camera.h  Component.h  GameObject.cpp  GameObject.h  Graphics.cpp  Graphics.h  ImGuiManager.cpp  Keyboard.cpp  Keyboard.h  NexusException.cpp  NexusException.h  WinMain.cpp  Window.cpp  Window.h  WindowsProject.cpp
app/src/Bindable/: Bindable.cpp  BindableBase.h  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.h  PixelShader.cpp  Texture.h  TransformCbuf.cpp  TransformCbuf.h  VertexBuffer.h  VertexShader.cpp  VertexShader.h
app/src/Component/: Component.h
app/src/Drawable/: Box.cpp  Box.h  Cube.h  Drawable.cpp  Drawable.h  DrawableBase.h  Drawing.cpp  IndexedTriangle.h  Object.h  Plane.h  Pyramid.cpp  Pyramid.h  Sphere.h
app/src/Drawable/Mesh/: Cone.h  Cube.h  IndexedTriangle.h  Mesh.cpp  Mesh.h  Sphere.h  Vertex.h
app/src/Drawable/Object/: Box.cpp  Box.h  Drawing.cpp  Drawing.h  MeshRenderer.h  Object.h  Pyramid.cpp  Pyramid.h  Transform.h
app/src/Exception/: GraphicsException.cpp  GraphicsException.h  WindowException.cpp  WindowException.h
app/src/IO/: Mouse.cpp  Mouse.h
app/src/Utils/: Timer.cpp  Timer.h
app/src/Window/: Window.cpp  Window.h
docs/: index.html  index.md
engine/: CMakeLists.txt
engine/runtime/: App.cpp  App.h  WinMain.cpp
engine/runtime/core/Drawable/: DrawableBase.h
engine/runtime/core/Drawable/Object/: Box.cpp  Box.h  Drawing.cpp  Drawing.h  Pyramid.cpp  Pyramid.h
engine/runtime/core/component/: MeshFilter.h  MeshRenderer.h
engine/runtime/core/io/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
engine/runtime/core/mesh/: Cone.h  Cube.h  IndexedTriangle.h  Mesh.cpp  Mesh.h  Plane.h  Sphere.h
engine/runtime/core/render_pipeline/: render_context.cpp  render_context.h  render_pipeline.h
engine/runtime/include/: BindableBase.h  NexusIO.h  NexusMacro.h  NexusMath.h
engine/runtime/modules/: Camera.cpp  GameObject.cpp  GameObject.h  ImGuiManager.cpp  ImGuiManager.h
engine/runtime/modules/component/: Component.h  MeshFilter.h  Transform.h  mesh_renderer.h  renderer.cpp  renderer.h
engine/runtime/platform/windows/: Graphics.cpp  Graphics.h  Surface.cpp  Surface.h  Window.cpp  Window.h  windows_platform_macro.h
engine/runtime/platform/windows/Bindable/: Bindable.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  PixelShader.h  Sampler.h  Texture.cpp  Topology.cpp  TransformCbuf.h
engine/runtime/platform/windows/directx11/: Graphics.h  vertex.h
engine/runtime/platform/windows/directx11/bindable/: Bindable.cpp  Bindable.h  ConstantBuffer.h  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  PixelShader.cpp  PixelShader.h  Sampler.cpp  Sampler.h  Texture.cpp  Texture.h  Topology.cpp  Topology.h  TransformCbuf.cpp  TransformCbuf.h  VertexBuffer.cpp  VertexBuffer.h  VertexShader.cpp  VertexShader.h  vertex_buffer.h
engine/runtime/platform/windows/exception/: Exception.cpp  Exception.h  GraphicsException.cpp
engine/runtime/src/: App.cpp  App.h  GameObject.cpp  GameObject.h  Surface.cpp  Surface.h
engine/runtime/src/Bindable/: InputLayout.h  Sampler.cpp  Topology.h  TransformCbuf.h  VertexBuffer.cpp
engine/runtime/src/Component/: MeshFilter.h
engine/runtime/src/Drawable/: DrawableBase.cpp
engine/runtime/src/Drawable/Mesh/: IndexedTriangle.h
engine/runtime/src/Drawable/Object/: Box.cpp  Pyramid.cpp  Pyramid.h
engine/runtime/src/Exception/: Exception.h
engine/runtime/src/IO/: Keyboard.h  Mouse.cpp  Mouse.h
engine/runtime/src/Utils/: Timer.h
engine/runtime/src/Window/: Window.h
engine/utils/: Color.cpp  Color.h
shader/: CMakeLists.txt
utils/: CMakeLists.txt
